# senskrap

./: README.md  pyproject.toml  requirements.txt
senskrap/: __init__.py
senskrap/base/: __init__.py  base_parser.py  base_scraper.py
senskrap/scrapers/: __init__.py  twitcasting.py
senskrap/scrapers/twitcasting/: __init__.py  base.py  shop.py  twitcasting_parser.py  twitcasting_scraper.py
senskrap/scrapers/twitcasting/premier/: __init__.py  premier_genre.py  premier_item.py  premier_parser.py  premier_shop.py
src/: __main__.py
src/senskrap/: __about__.py  __init__.py
src/senskrap/base/: __init__.py  base_parser.py  base_scraper.py
src/senskrap/scrapers/: __init__.py
src/senskrap/scrapers/twitcasting/: __init__.py  twitcasting_parser.py  twitcasting_scraper.py
src/senskrap/scrapers/twitcasting/premier/: __init__.py  premier_item.py  premier_parser.py  premier_shop.py
